Fix production CORS configuration